* (0.8.201) (- Build number .201 for testing purposes)   * Image support relative path - fork <https://github.com/914802951/MarkdownViewerPlusPlus>   * Table with borders - but can be overwritten by MarkdownViewer++ Options \ HTML \ Custom CSS (AbstractRenderer.cs reverted to prev.ver.) Initial CSS (in MarkdownViewerHTML.css): /* Avoid page breaks inside the most common attributes, especially for exports (i.e. PDF) */ td, h1, h2, h3, h4, h5, p, ul, ol, li {page-break-inside: avoid;} /* vertical alignment for text and code */ body {font-family: Calibri, sans-serif;} code {font-family: Consolas, monospace; color: Navy;} /* table border and padding */ table {border-collapse: collapse;} td, th {border: 1px solid Navy; padding: 6px;}

--- a/MarkdownViewerPlusPlus/Resources/MarkdownViewerHTML.css
+++ b/MarkdownViewerPlusPlus/Resources/MarkdownViewerHTML.css
@@ -2,3 +2,10 @@
 td, h1, h2, h3, h4, h5, p, ul, ol, li {
     page-break-inside: avoid; 
 }
+/* vertical alignment for text and code */
+body {font-family: Calibri, sans-serif;}
+code {font-family: Consolas, monospace; color: Navy;}
+/* table border and padding */
+table {border-collapse: collapse;}
+td, th {border: 1px solid Navy; padding: 6px;}
+/* all above can be overwritten by N++ \ Plugins \ MarkdownViewer++ \ Options \ HTML \ Custom CSS */
